--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2021"
 
 [dependencies]
 dotenv = "0.15.0"
-songbird = "0.3.1"
 
 [dependencies.tokio]
 version = "1"
@@ -17,3 +16,6 @@ features = ["macros", "signal", "rt-multi-thread"]
 version = "0.11"
 features = ["voice"]
 
+[dependencies.songbird]
+version = "0.3.1"
+features = ["builtin-queue"]
