--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,7 @@
 [package]
-name = "musicbotrs"
+name = "MusicBox"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 dotenv = "0.15.0"
@@ -19,3 +17,4 @@ features = ["voice"]
 [dependencies.songbird]
 version = "0.3.1"
 features = ["builtin-queue"]
+
